# hrc_simulation

./: README.md
Azure_Kinect_ROS_Driver/launch/: custom_driver.launch
Azure_Kinect_ROS_Driver/urdf/: azure_kinect.urdf.xacro  azure_kinect_1.urdf.xacro  camera.xacro
fmauch_universal_robot/final_test/: .setup_assistant  CMakeLists.txt  package.xml
fmauch_universal_robot/gripper_test/: .setup_assistant  CMakeLists.txt  package.xml
fmauch_universal_robot/scripts/: 1.py  2.py  IK_path_planning.py.py  auto_photo.py  camera_gripper.py  cartesian.py  cartesian_test.py  depth_test.py  detect_object_pick.py  new_test.py  path_planning.py  pick_test.py  red_detect.py  red_test.py  test.py  test_tf.py  tf_position.py  try_pick.py
fmauch_universal_robot/test/: .setup_assistant  package.xml
fmauch_universal_robot/test_1/: .setup_assistant  CMakeLists.txt  package.xml
hrc_real/: Running the HRC system  hrc_scene.rviz  run_HRC.sh
hrc_real/hrc_ws/hrc_interface/: CMakeLists.txt  package.xml
hrc_real/hrc_ws/hrc_interface/launch/: run_UR_azure.launch  run_gripper_transform_rviz.launch
hrc_real/hrc_ws/hrc_interface/scripts/: GlobalPlanning.py  Integration_Test.py  Tool_Detection.py  azure_full_body_publishing.py  bounding_box_test.py  gesture_recog_fsm.py  gripper_test.py  hp_test.py  joint_position_movement.py  new_test_avoidance_server.py  plot_Results.py  test_moveit.py  tool_picker.py  tool_tracking.py  try.json  worker_displacement_measuring.py
hrc_real/hrc_ws/hrc_interface/scripts/1/: auto_photo.py  main_node.py  palm_position.py  rhand_position.py  robot_control.py  self_learning.py  tf_coordinate.py  vision_processing.py
hrc_real/hrc_ws/hrc_interface/scripts/1/cognitve/: palm_well.py  random_tool_choose.py
hrc_real/hrc_ws/hrc_interface/scripts/libs/: gripper.py
hrc_real/hrc_ws/hrc_interface/scripts/src/: HRC_FSM.py  Inventory.py  ROS_Callbacks.py  Tool.py  e_greedy.py  good_print.py  random_pick.py  try.json
hrc_real/hrc_ws/hrc_interface/scripts/src/cognitve/: palm_fist.py  palm_position.py  pick_test.py  rl_greedy.py
hrc_real/hrc_ws/hrc_interface/scripts/src/libs/: gripper.py
pycontrol/scripts/: IK_path_planning(not).py  anton.py  con.py  detect_object_pick.py  gripper_test.py  home.py  listener.py  media.py  robot_only.py  ros_cart.py  ros_demo.py  talker.py
pycontrol/scripts/sim/: anton.py  (+11 more)
(+99 files in other folders)
